--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
-credentials:
-  database: "test"
-  password: ""
-  host: "localhost"
-  user: "root"
+storage:
+  credentials:
+    database: "test"
+    password: "123"
+    host: "localhost"
+    user: "root"
